--- a/assets/index.scss
+++ b/assets/index.scss
@@ -14,6 +14,11 @@ body {
     flex-direction: column;
     align-content: space-around;
     margin: 20px;
+    position: relative;
+    padding: 0;
+    display: block;
+    cursor: pointer;
+    overflow: hidden;
 }
 
 header{
@@ -63,3 +68,30 @@ footer{
     justify-content: space-around;
 }
 
+.monter{
+    opacity: 1;
+    font-size: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 250px;
+    -webkit-transition: all 400ms ease-out;
+    -moz-transition: all 400ms ease-out;
+    -o-transition: all 400ms ease-out;
+    -ms-transition: all 400ms ease-out;
+    transition: all 400ms ease-out;
+}
+.tout .monter:hover{
+    opacity: 1;
+}
+.tout .monter .parole{
+    height: 0;
+    opacity: 1;
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+}
+.tout .monter:hover .parole{
+    opacity: 1;
+    transform: translateY(250px);
+    -webkit-transform: translateY(250px);
+}
