--- a/assets/index.css
+++ b/assets/index.css
@@ -1,46 +1,45 @@
-@-webkit-keyframes appearanceofthetext {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    max-height: 60px;
-  }
+.animation {
+  cursor: pointer;
 }
-@keyframes appearanceofthetext {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    max-height: 60px;
-  }
+.animation:hover .header__img {
+  transform: scale(1.3);
+  transition: transform 400ms ease-in-out;
+  opacity: 0.5;
 }
+.animation:hover .proj-main__titles {
+  transform: translateY(-120%);
+  transition: transform 400ms ease-in-out;
+  padding-top: 5px;
+}
+.animation:hover .proj-main__photos {
+  display: inline-block;
+  transform: translateY(-300%);
+  transition: transform 400ms ease-in-out;
+}
+.animation:hover .proj-main__txt {
+  max-height: 60px;
+  transform: translateY(-200%);
+  transition: transform 400ms ease-in-out;
+  margin-bottom: -100px;
+}
+
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: black;
-}
-
-.all {
   width: 427px;
-  height: 650px;
+  height: 600px;
   border: 5px solid black;
   display: flex;
   flex-direction: column;
   align-content: space-around;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-top: 30px;
 }
 
 header {
   display: flex;
   flex-direction: column;
-}
-header .header__all {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  align-items: end;
+  overflow: hidden;
+  align-items: flex-end;
 }
 header .header__date {
   color: #FCF8E8;
@@ -62,23 +61,21 @@ header .header__img {
   padding-left: 20px;
 }
 .proj-main__titles {
-  margin-left: 20px;
+  padding-left: 20px;
   margin-right: 20px;
-  margin-top: 30px;
-  cursor: pointer;
+  margin-top: 20px;
+  margin-right: 0px;
+  background-color: white;
 }
 .proj-main__titles h2 {
   color: #DF7861;
 }
-.proj-main__titles:hover + .proj-main__txt {
-  -webkit-animation: appearanceofthetext 1s forwards;
-          animation: appearanceofthetext 1s forwards;
-}
 .proj-main__txt {
-  margin-left: 20px;
+  padding-left: 20px;
   margin-right: 20px;
   color: #666666;
   text-align: justify;
+  font-size: 1em;
   overflow: hidden;
   max-height: 0;
 }
@@ -87,7 +84,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 45px;
+  margin-top: 50px;
 }
 footer .comments {
   margin-left: -70px;
