--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,5 +1,5 @@
 @mixin margin {
-    margin-left: 20px;
+    padding-left: 20px;
     margin-right: 20px;
 }
 @mixin info {
@@ -7,55 +7,66 @@
     background-color: $back-color;
     padding: 10px;
 }
-@keyframes appearanceofthetext {
-From {
-    opacity: 0;
-}
-To {
-    opacity: 1;
-    max-height: 60px;
-}
-}
 
 $back-color: #DF7861;
 $primary-color: black;
 $secondary-color: #FCF8E8;
 
+.animation {
+    cursor: pointer;
+    &:hover {
+        .header__img {
+            transform: scale(1.3);
+            transition: transform 400ms ease-in-out;
+            opacity: 0.5;
+        }
+        .proj-main__titles {
+            transform: translateY(-120%);
+            transition: transform 400ms ease-in-out;
+            padding-top: 5px;
+        }
+        .proj-main__photos {
+            display: inline-block;
+            transform: translateY(-300%);
+            transition: transform 400ms ease-in-out;
+        }
+        .proj-main__txt {
+            max-height: 60px;
+            transform: translateY(-200%);
+            transition: transform 400ms ease-in-out;
+            margin-bottom: -100px;
+        }
+    }
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: $primary-color;
-}
-
-.all {
     width: 427px;
-    height: 650px;
+    height: 600px;
     border: 5px solid black;
     display: flex;
     flex-direction: column;
     align-content: space-around;
-    @include margin;
+    margin-top: 30px;
 }
 
 header {
     display: flex;
     flex-direction: column;
-    .header__all {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        align-items: end;
+    overflow: hidden;
+    align-items: flex-end;
+        .header__date {
+            @include info;
+            border-radius: 40%;
+            position: absolute;
+            margin: 10px;
+            }
+        .header__img {
+            margin-bottom: -25px;
+            }
     }
-    .header__date {
-        @include info;
-        border-radius: 40%;
-        position: absolute;
-        margin: 10px;
-    }
-    .header__img {
-        margin-bottom: -25px;
-    }
-    
-}
+
 
 .proj-main {
     &__photos {
@@ -65,19 +76,18 @@ header {
     }
     &__titles {
         @include margin;
-        margin-top: 30px;
-        cursor: pointer;
+        margin-top: 20px;
+        margin-right: 0px;
+        background-color: white;
         h2 {
             color: $back-color;
-        }
-        &:hover + .proj-main__txt {
-            animation: appearanceofthetext 1s forwards;
         }
     }
     &__txt {
         @include margin;
         color: lighten($primary-color, 40%);
         text-align: justify;
+        font-size: 1em;
         overflow: hidden;
         max-height: 0;
     }
@@ -87,7 +97,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 45px;
+    margin-top: 50px;
     .comments {
         margin-left: -70px;
         color: #94B49F;
