--- a/assets/index.scss
+++ b/assets/index.scss
@@ -44,11 +44,14 @@ body {
     color: $primary-color;
     width: 427px;
     height: 600px;
-    border: 5px solid black;
+    border: 1px solid lighten($primary-color, 40%);;
     display: flex;
     flex-direction: column;
     align-content: space-around;
     margin-top: 30px;
+    &:hover {
+        box-shadow: 5px 5px 5px lighten($primary-color, 40%);
+    }
 }
 
 header {
